# fastapi-storages

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  tests.yml
api_reference/storages/: index.html
docs/: index.md  storages.md  types.md  usage.md
docs/api_reference/: storages.md
fastapi_storages/: __init__.py  base.py  filesystem.py  s3.py  utils.py
fastapi_storages/integrations/: peewee.py  sqlalchemy.py
search/: search_index.json
sqlalchemy_fields/: exceptions.py
sqlalchemy_fields/storages/: __init__.py  base.py  filesystem.py  s3.py
sqlalchemy_fields/types/: __init__.py  email.py  file.py  image.py  ip.py  url.py  uuid.py
tests/: engine.py  test_filesystem_storage.py  test_s3_storage.py  utils.py
tests/test_integrations/: utils.py
tests/test_integrations/test_peewee/: test_file.py  test_image.py
tests/test_integrations/test_sqlalchemy/: test_file.py  test_image.py
tests/test_storages/: test_filesystem_storage.py  test_s3_storage.py
tests/test_types/: test_email.py  test_file.py  test_image.py  test_ip.py  test_url.py  test_uuid.py
usage/: index.html
