[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-storages"
description = 'FastAPI Storages'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["sqlalchemy", "django", "orm", "fastapi"]
authors = [
  { name = "Amin Alaee", email = "me@aminalaee.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "boto3~=1.25",
]
dynamic = ["version"]

[project.optional-dependencies]
full = [
  "Pillow~=10.0",
  "sqlalchemy>=1.4",
  "peewee>=3",
]

[project.urls]
Documentation = "https://github.com/aminalaee/fastapi-storages#readme"
Issues = "https://github.com/aminalaee/fastapi-storages/issues"
Source = "https://github.com/aminalaee/fastapi-storages"

[tool.hatch.version]
path = "fastapi_storages/__init__.py"

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.sdist]
include = [
    "/fastapi_storages",
]

[tool.hatch.build]
exclude = [
  "tests/*",
]

[tool.hatch.envs.default]
dependencies = [
  "build==1.0.3",
  "coverage==7.3.3",
  "moto==4.2.11",
  "mypy==1.7.1",
  "peewee>=3",
  "Pillow==10.1.0",
  "pytest==7.4.3",
  "ruff==0.1.8",
  "sqlalchemy>=1.4",
]

[tool.hatch.envs.default.scripts]
check = [
  "ruff .",
  "ruff format --check .",
  "mypy fastapi_storages",
]
cov = [
  "coverage report --show-missing --skip-covered --fail-under=99",
  "coverage xml",
]
format = [
  "ruff format .",
  "ruff --fix .",
]
test = "coverage run -m pytest {args}"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs-material==9.5.2",
  "mkdocs==1.5.3",
  "mkdocstrings[python]==0.24.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve --dev-addr localhost:8080"
deploy = "mkdocs gh-deploy --force"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true

[tool.ruff]
select = ["E", "F", "I"]

[tool.coverage.run]
source_pkgs = [
  "fastapi_storages",
  "tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except NotImplementedError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
